# latex-snippets-for-vscode

./: .gitignore  CHANGELOG.md  LICENSE  README.md  book.json  cheatsheet.md  latex.hsnips  package-lock.json  package.json  snippets-reference.md
.github/workflows/: release.yml
_docs/: README.md  SUMMARY.md
_docs/cheatsheet/: cheatsheet.md
_docs/reference/: snippets-reference.md
demo/: demo.tex
docs/: index.html  search_index.json
docs/cheatsheet/: cheatsheet.html
docs/reference/: snippets-reference.html
script/: rename.sh
sty/: commands.sty  commands_UTF.sty  envs.sty
table-generator/: package-lock.json  pyproject.toml  usage.md
table-generator/data/: commands.json  table-commands.txt
table-generator/scr/: json2table.py
